--- a/index.html
+++ b/index.html
@@ -2,70 +2,84 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Abdel Aziz Desoky Hassan</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="cv-container">
         <header>
-            <h1>Abdel Aziz Desoky Hassan</h1>
-            <p>IT - Technical Support</p>
+            <div class="header-content">
+                <h1>Abdel Aziz Desoky Hassan</h1>
+                <p>IT - Technical Support</p>
+                <p class="contact-info">Abohumad - Alsharqia | 01065852424 | a.desoky@outlook.com</p>
+            </div>
         </header>
-        
-        <section class="personal-info">
-            <h2>Personal Information</h2>
-            <ul>
-                <li><strong>Date of Birth:</strong> 20 July 1988</li>
-                <li><strong>Address:</strong> Abohumad - Alsharqia</li>
-                <li><strong>Marital Status:</strong> Married</li>
-                <li><strong>Military Service:</strong> Performed</li>
-                <li><strong>Phone:</strong> 01065852424</li>
-                <li><strong>Email:</strong> a.desoky@outlook.com</li>
-            </ul>
-        </section>
 
-        <section class="education">
-            <h2>Education</h2>
-            <p>Zagazig University-specific education, Educational Technology- Computer (2009) - Grade: Good</p>
-        </section>
+        <main>
+            <section class="section personal-info">
+                <h2>Personal Information</h2>
+                <ul>
+                    <li><strong>Date of Birth:</strong> 20 July 1988</li>
+                    <li><strong>Address:</strong> Abohumad - Alsharqia</li>
+                    <li><strong>Marital Status:</strong> Married</li>
+                    <li><strong>Military Service:</strong> Performed</li>
+                </ul>
+            </section>
 
-        <section class="certifications">
-            <h2>Training Session and Certifications</h2>
-            <ul>
-                <li>WordPress 2021</li>
-                <li>MCSA2012 / MCITP2008</li>
-                <li>Kaspersky Security Center 10</li>
-            </ul>
-        </section>
+            <section class="section education">
+                <h2>Education</h2>
+                <p>Zagazig University-specific education, Educational Technology- Computer (2009) - Grade: Good</p>
+            </section>
 
-        <section class="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>Time management, Teamwork, Problem-solving</li>
-                <li>Computer (Hardware-software)- Network</li>
-                <li>Printer troubleshooting</li>
-                <li>System camera and security systems</li>
-            </ul>
-        </section>
+            <section class="section certifications">
+                <h2>Training Session and Certifications</h2>
+                <ul>
+                    <li>WordPress 2021: Custom Theme Development, Plugin Development, and Optimization</li>
+                    <li>MCSA2012 / MCITP2008: Advanced Network and Server Management</li>
+                    <li>Kaspersky Security Center 10: Server and Host Management</li>
+                </ul>
+            </section>
 
-        <section class="experience">
-            <h2>Experience</h2>
-            <ul>
-                <li><strong>2018-2022:</strong> Alarabia group, IT - Technical Support</li>
-                <li><strong>2015-2017:</strong> Compuland for Computer and System, IT - Help desk</li>
-                <li><strong>2013-2015:</strong> Free Works, Maintenance & troubleshooting</li>
-                <li><strong>2010-2011:</strong> Egyptian army, Computer Desk</li>
-            </ul>
-        </section>
+            <section class="section skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Problem-solving, Teamwork, Time Management, Communication Skills</li>
+                    <li>Computer (Hardware-Software), Network, System Camera</li>
+                    <li>Printer troubleshooting, Security Systems</li>
+                </ul>
+            </section>
 
-        <section class="languages">
-            <h2>Languages</h2>
-            <ul>
-                <li>Arabic: Native</li>
-                <li>English: Expert</li>
-            </ul>
-        </section>
+            <section class="section experience">
+                <h2>Experience</h2>
+                <div class="job">
+                    <h3>2018-2022: Alarabia group, IT - Technical Support</h3>
+                    <p>New Infrastructure setup, Domain, ERP, Maintenance, Network, Printer troubleshooting</p>
+                </div>
+                <div class="job">
+                    <h3>2015-2017: Compuland for Computer and System, IT - Help desk</h3>
+                    <p>Maintenance of systems, Network setup, and troubleshooting</p>
+                </div>
+                <div class="job">
+                    <h3>2013-2015: Free Works, Maintenance & troubleshooting</h3>
+                    <p>Computer and Network troubleshooting and support</p>
+                </div>
+                <div class="job">
+                    <h3>2010-2011: Egyptian army, Computer Desk</h3>
+                    <p>MS Office, Printer document/report management</p>
+                </div>
+            </section>
+
+            <section class="section languages">
+                <h2>Languages</h2>
+                <ul>
+                    <li>Arabic: Native</li>
+                    <li>English: Expert</li>
+                </ul>
+            </section>
+        </main>
     </div>
 </body>
 </html>
