--- a/index.html
+++ b/index.html
@@ -5,81 +5,179 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Abdel Aziz Desoky Hassan</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+            background-color: #f4f7fc;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        #container {
+            display: flex;
+            max-width: 1200px;
+            margin: 20px auto;
+            gap: 20px;
+        }
+
+        #profile {
+            flex: 1;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        #image img {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        #name {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin: 10px 0;
+        }
+
+        #designation {
+            color: #555;
+        }
+
+        #social-links a {
+            margin-right: 10px;
+            color: #333;
+            text-decoration: none;
+        }
+
+        #info-cards {
+            flex: 2;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .card {
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        .card p {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .card ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .card ul li {
+            margin-bottom: 10px;
+        }
+
+        .tags {
+            font-size: 0.9rem;
+            color: #666;
+        }
+
+        .edit {
+            float: right;
+        }
+    </style>
 </head>
 <body>
-    <div class="cv-container">
-        <header>
-            <div class="header-content">
-                <h1>Abdel Aziz Desoky Hassan</h1>
-                <p>IT - Technical Support</p>
-                <p class="contact-info">Abohumad - Alsharqia | 01065852424 | a.desoky@outlook.com</p>
+    <div id="inner-nav"></div>
+    <div id="container">
+        <div id="profile">
+            <div id="image">
+                <img id="profile-photo" src="https://via.placeholder.com/150" alt="Profile-Image">
+                <a href="#"><i class="fas fa-pen stroke-transparent"></i></a>
             </div>
-        </header>
-
-        <main>
-            <section class="section personal-info">
-                <h2>Personal Information</h2>
+            <p id="name">Abdel Aziz Desoky Hassan<br><span id="email">a.desoky@outlook.com</span></p>
+            <p id="designation">IT - Technical Support<br><span id="college">Abohumad - Alsharqia, Egypt</span></p>
+            <div id="social-links">
+                <a href="#"><i class="fab fa-facebook-f stroke-transparent"></i></a>
+                <a href="#"><i class="fab fa-twitter stroke-transparent"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in stroke-transparent"></i></a>
+                <a href="#"><i class="fab fa-github stroke-transparent"></i></a>
+            </div>
+            <a id="edit-intro" href="#"><i class="fas fa-pen-alt blue"></i>&nbsp;&nbsp;Edit Intro</a>
+            <hr width="100%">
+            <div id="about">
+                <p style="display:inline;">About</p>
+                <a href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+            </div>
+            <p id="year-graduation">Date of Birth<br><strong>20 July 1988</strong></p>
+            <p id="education">Education<br><strong>Zagazig University, Educational Technology- Computer (2009) - Grade: Good</strong></p>
+            <p id="more-about">Marital Status<br><span>Married</span></p>
+            <p id="telephone">Telephone<br><strong>01065852424</strong></p>
+            <p id="fax">Military Service<br><strong>Performed</strong></p>
+        </div>
+        <div id="info-cards">
+            <div class="card">
+                <p><i class="fas fa-briefcase stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Work Experience</p>
                 <ul>
-                    <li><strong>Date of Birth:</strong> 20 July 1988</li>
-                    <li><strong>Address:</strong> Abohumad - Alsharqia</li>
-                    <li><strong>Marital Status:</strong> Married</li>
-                    <li><strong>Military Service:</strong> Performed</li>
+                    <li>
+                        <p class="tags">2018-2022: Alarabia group, IT - Technical Support<br><span>New Infrastructure setup, Domain, ERP, Maintenance, Network, Printer troubleshooting</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">2015-2017: Compuland for Computer and System, IT - Help desk<br><span>Maintenance of systems, Network setup, and troubleshooting</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">2013-2015: Free Works<br><span>Maintenance & troubleshooting of Hardware Computer / Laptop and Network</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">2010-2011: Egyptian army, Computer Desk<br><span>MS Office, Printer document/report management</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
                 </ul>
-            </section>
-
-            <section class="section education">
-                <h2>Education</h2>
-                <p>Zagazig University-specific education, Educational Technology- Computer (2009) - Grade: Good</p>
-            </section>
-
-            <section class="section certifications">
-                <h2>Training Session and Certifications</h2>
+                <a href="#">+ Add work experience</a>
+            </div>
+            <div class="card">
+                <p><i class="fas fa-graduation-cap stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Certifications</p>
                 <ul>
-                    <li>WordPress 2021: Custom Theme Development, Plugin Development, and Optimization</li>
-                    <li>MCSA2012 / MCITP2008: Advanced Network and Server Management</li>
-                    <li>Kaspersky Security Center 10: Server and Host Management</li>
+                    <li>
+                        <p class="tags">WordPress 2021<br><span>Knowledge of WordPress, Custom Theme Development, and Plugin Development</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">MCSA2012 / MCITP2008<br><span>Advanced Network and Server Management</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">Kaspersky Security Center 10<br><span>Server and Host Management</span></p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
                 </ul>
-            </section>
-
-            <section class="section skills">
-                <h2>Skills</h2>
+                <a href="#">+ Add new certifications</a>
+            </div>
+            <div class="card">
+                <p><i class="fas fa-graduation-cap stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Skills</p>
                 <ul>
-                    <li>Problem-solving, Teamwork, Time Management, Communication Skills</li>
-                    <li>Computer (Hardware-Software), Network, System Camera</li>
-                    <li>Printer troubleshooting, Security Systems</li>
+                    <li>
+                        <p class="tags">Problem-solving, Teamwork, Time Management, Communication Skills</p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">Computer (Hardware-Software), Network, System Camera</p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
+                    <li>
+                        <p class="tags">Printer troubleshooting, Security Systems</p>
+                        <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a>
+                    </li>
                 </ul>
-            </section>
-
-            <section class="section experience">
-                <h2>Experience</h2>
-                <div class="job">
-                    <h3>2018-2022: Alarabia group, IT - Technical Support</h3>
-                    <p>New Infrastructure setup, Domain, ERP, Maintenance, Network, Printer troubleshooting</p>
-                </div>
-                <div class="job">
-                    <h3>2015-2017: Compuland for Computer and System, IT - Help desk</h3>
-                    <p>Maintenance of systems, Network setup, and troubleshooting</p>
-                </div>
-                <div class="job">
-                    <h3>2013-2015: Free Works, Maintenance & troubleshooting</h3>
-                    <p>Computer and Network troubleshooting and support</p>
-                </div>
-                <div class="job">
-                    <h3>2010-2011: Egyptian army, Computer Desk</h3>
-                    <p>MS Office, Printer document/report management</p>
-                </div>
-            </section>
-
-            <section class="section languages">
-                <h2>Languages</h2>
-                <ul>
-                    <li>Arabic: Native</li>
-                    <li>English: Expert</li>
-                </ul>
-            </section>
-        </main>
+                <a href="#">+ Add new skills</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
