--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <style>
-       
-    </style>
+  
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="rela-block page">
