--- a/index.html
+++ b/index.html
@@ -6,56 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Abdel Aziz Desoky Hassan</title>
     <!-- FONTS -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <!-- Linking to external CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="rela-block page">
-        <div class="rela-block top-bar">
-            <div class="caps name"><div class="abs-center">Abdel Aziz Desoky Hassan</div></div>
+    <div class="page">
+        <div class="top-bar">
+            <h1 class="name">Abdel Aziz Desoky Hassan</h1>
+            <h2 class="title">IT - Technical Support Specialist</h2>
         </div>
-        <div class="side-bar">
-            <div class="mugshot">
-                <img src="https://via.placeholder.com/100" alt="Profile Picture">
-            </div>
-            <p>Abohumad, Alsharqia, Egypt</p>
-            <p>01065852424</p>
-            <p>a.desoky@outlook.com</p><br>
-            <p class="rela-block social twitter">Twitter: @desoky</p>
-            <p class="rela-block social linked-in">LinkedIn: /in/desoky</p>
-            <p class="rela-block caps side-header">Expertise</p>
-            <p class="rela-block list-thing">Technical Support</p>
-            <p class="rela-block list-thing">Network Administration</p>
-            <p class="rela-block list-thing">System Maintenance</p>
-            <p class="rela-block list-thing">Troubleshooting</p>
-            <p class="rela-block caps side-header">Education</p>
-            <p class="rela-block list-thing">Zagazig University, Educational Technology - Computer (2009)</p>
-        </div>
-        <div class="rela-block content-container">
-            <h2 class="rela-block caps title">IT - Technical Support Specialist</h2>
-            <div class="rela-block separator"></div>
-            <div class="rela-block caps greyed">Profile</div>
-            <p class="long-margin">Highly skilled IT Technical Support Specialist with a strong background in network administration, system maintenance, and troubleshooting. Proven ability to set up and manage IT infrastructures, domain systems, and ERP solutions.</p>
-            <div class="rela-block caps greyed">Experience</div>
-
-            <h3>Alarabia Group (2018-2022)</h3>
-            <p class="light">IT - Technical Support</p>
-            <p class="justified">Set up new infrastructure, managed domain and ERP systems, and handled maintenance and troubleshooting for networks and printers.</p>
-
-            <h3>Compuland for Computer and System (2015-2017)</h3>
-            <p class="light">IT - Help Desk</p>
-            <p class="justified">Provided system maintenance, network setup, and troubleshooting support for various hardware and software issues.</p>
-
-            <h3>Free Works (2013-2015)</h3>
-            <p class="light">Freelance IT Specialist</p>
-            <p class="justified">Performed hardware and network troubleshooting for both computers and laptops, ensuring optimal performance.</p>
-
-            <h3>Egyptian Army (2010-2011)</h3>
-            <p class="light">Computer Desk</p>
-            <p class="justified">Managed MS Office tasks, printer documentation, and report management during military service.</p>
+        <div class="content">
+            <aside class="side-bar">
+                <div class="mugshot">
+                    <img src="https://via.placeholder.com/100" alt="Profile Picture">
+                </div>
+                <div class="contact-info">
+                    <p>Abohumad, Alsharqia, Egypt</p>
+                    <p>01065852424</p>
+                    <p>a.desoky@outlook.com</p>
+                </div>
+                <div class="social-links">
+                    <p>Twitter: @desoky</p>
+                    <p>LinkedIn: /in/desoky</p>
+                </div>
+                <div class="section">
+                    <h3 class="side-header">Expertise</h3>
+                    <ul class="list">
+                        <li>Technical Support</li>
+                        <li>Network Administration</li>
+                        <li>System Maintenance</li>
+                        <li>Troubleshooting</li>
+                    </ul>
+                </div>
+                <div class="section">
+                    <h3 class="side-header">Education</h3>
+                    <ul class="list">
+                        <li>Zagazig University, Educational Technology - Computer (2009)</li>
+                    </ul>
+                </div>
+            </aside>
+            <main class="main-content">
+                <section>
+                    <h3 class="section-header">Profile</h3>
+                    <p>Highly skilled IT Technical Support Specialist with a strong background in network administration, system maintenance, and troubleshooting. Proven ability to set up and manage IT infrastructures, domain systems, and ERP solutions.</p>
+                </section>
+                <section>
+                    <h3 class="section-header">Experience</h3>
+                    <div class="job">
+                        <h4>Alarabia Group (2018-2022)</h4>
+                        <p class="role">IT - Technical Support</p>
+                        <p>Set up new infrastructure, managed domain and ERP systems, and handled maintenance and troubleshooting for networks and printers.</p>
+                    </div>
+                    <div class="job">
+                        <h4>Compuland for Computer and System (2015-2017)</h4>
+                        <p class="role">IT - Help Desk</p>
+                        <p>Provided system maintenance, network setup, and troubleshooting support for various hardware and software issues.</p>
+                    </div>
+                    <div class="job">
+                        <h4>Free Works (2013-2015)</h4>
+                        <p class="role">Freelance IT Specialist</p>
+                        <p>Performed hardware and network troubleshooting for both computers and laptops, ensuring optimal performance.</p>
+                    </div>
+                    <div class="job">
+                        <h4>Egyptian Army (2010-2011)</h4>
+                        <p class="role">Computer Desk</p>
+                        <p>Managed MS Office tasks, printer documentation, and report management during military service.</p>
+                    </div>
+                </section>
+            </main>
         </div>
     </div>
 </body>
