--- a/index.html
+++ b/index.html
@@ -5,79 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Abdel Aziz Desoky Hassan</title>
-    <!-- FONTS -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <!-- Linking to external CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="page">
-        <div class="top-bar">
-            <h1 class="name">Abdel Aziz Desoky Hassan</h1>
-            <h2 class="title">IT - Technical Support Specialist</h2>
-        </div>
-        <div class="content">
-            <aside class="side-bar">
-                <div class="mugshot">
-                    <img src="https://via.placeholder.com/100" alt="Profile Picture">
+    <div class="cv-container">
+        <header>
+            <div class="header-content">
+                <h1>Abdel Aziz Desoky Hassan</h1>
+                <p>IT - Technical Support</p>
+                <p class="contact-info">Abohumad - Alsharqia | 01065852424 | a.desoky@outlook.com</p>
+            </div>
+        </header>
+
+        <main>
+            <section class="section personal-info">
+                <h2>Personal Information</h2>
+                <ul>
+                    <li><strong>Date of Birth:</strong> 20 July 1988</li>
+                    <li><strong>Address:</strong> Abohumad - Alsharqia</li>
+                    <li><strong>Marital Status:</strong> Married</li>
+                    <li><strong>Military Service:</strong> Performed</li>
+                </ul>
+            </section>
+
+            <section class="section education">
+                <h2>Education</h2>
+                <p>Zagazig University-specific education, Educational Technology- Computer (2009) - Grade: Good</p>
+            </section>
+
+            <section class="section certifications">
+                <h2>Training Session and Certifications</h2>
+                <ul>
+                    <li>WordPress 2021: Custom Theme Development, Plugin Development, and Optimization</li>
+                    <li>MCSA2012 / MCITP2008: Advanced Network and Server Management</li>
+                    <li>Kaspersky Security Center 10: Server and Host Management</li>
+                </ul>
+            </section>
+
+            <section class="section skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Problem-solving, Teamwork, Time Management, Communication Skills</li>
+                    <li>Computer (Hardware-Software), Network, System Camera</li>
+                    <li>Printer troubleshooting, Security Systems</li>
+                </ul>
+            </section>
+
+            <section class="section experience">
+                <h2>Experience</h2>
+                <div class="job">
+                    <h3>2018-2022: Alarabia group, IT - Technical Support</h3>
+                    <p>New Infrastructure setup, Domain, ERP, Maintenance, Network, Printer troubleshooting</p>
                 </div>
-                <div class="contact-info">
-                    <p>Abohumad, Alsharqia, Egypt</p>
-                    <p>01065852424</p>
-                    <p>a.desoky@outlook.com</p>
+                <div class="job">
+                    <h3>2015-2017: Compuland for Computer and System, IT - Help desk</h3>
+                    <p>Maintenance of systems, Network setup, and troubleshooting</p>
                 </div>
-                <div class="social-links">
-                    <p>Twitter: @desoky</p>
-                    <p>LinkedIn: /in/desoky</p>
+                <div class="job">
+                    <h3>2013-2015: Free Works, Maintenance & troubleshooting</h3>
+                    <p>Computer and Network troubleshooting and support</p>
                 </div>
-                <div class="section">
-                    <h3 class="side-header">Expertise</h3>
-                    <ul class="list">
-                        <li>Technical Support</li>
-                        <li>Network Administration</li>
-                        <li>System Maintenance</li>
-                        <li>Troubleshooting</li>
-                    </ul>
+                <div class="job">
+                    <h3>2010-2011: Egyptian army, Computer Desk</h3>
+                    <p>MS Office, Printer document/report management</p>
                 </div>
-                <div class="section">
-                    <h3 class="side-header">Education</h3>
-                    <ul class="list">
-                        <li>Zagazig University, Educational Technology - Computer (2009)</li>
-                    </ul>
-                </div>
-            </aside>
-            <main class="main-content">
-                <section>
-                    <h3 class="section-header">Profile</h3>
-                    <p>Highly skilled IT Technical Support Specialist with a strong background in network administration, system maintenance, and troubleshooting. Proven ability to set up and manage IT infrastructures, domain systems, and ERP solutions.</p>
-                </section>
-                <section>
-                    <h3 class="section-header">Experience</h3>
-                    <div class="job">
-                        <h4>Alarabia Group (2018-2022)</h4>
-                        <p class="role">IT - Technical Support</p>
-                        <p>Set up new infrastructure, managed domain and ERP systems, and handled maintenance and troubleshooting for networks and printers.</p>
-                    </div>
-                    <div class="job">
-                        <h4>Compuland for Computer and System (2015-2017)</h4>
-                        <p class="role">IT - Help Desk</p>
-                        <p>Provided system maintenance, network setup, and troubleshooting support for various hardware and software issues.</p>
-                    </div>
-                    <div class="job">
-                        <h4>Free Works (2013-2015)</h4>
-                        <p class="role">Freelance IT Specialist</p>
-                        <p>Performed hardware and network troubleshooting for both computers and laptops, ensuring optimal performance.</p>
-                    </div>
-                    <div class="job">
-                        <h4>Egyptian Army (2010-2011)</h4>
-                        <p class="role">Computer Desk</p>
-                        <p>Managed MS Office tasks, printer documentation, and report management during military service.</p>
-                    </div>
-                </section>
-            </main>
-        </div>
+            </section>
+
+            <section class="section languages">
+                <h2>Languages</h2>
+                <ul>
+                    <li>Arabic: Native</li>
+                    <li>English: Expert</li>
+                </ul>
+            </section>
+        </main>
     </div>
 </body>
 </html>
