--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <div id="container">
         <div id="profile">
             <div id="image">
-                <img id="profile-photo" src="https://via.placeholder.com/150" alt="Profile-Image">
-                <a href="#"><i class="fas fa-pen stroke-transparent"></i></a>
+                <img id="profile-photo" src="" alt="Profile-Image">
+              
             </div>
             <p id="name">Abdel Aziz Desoky Hassan<br><span id="email">a.desoky@outlook.com</span></p>
             <p id="designation">IT - Technical Support<br><span id="college">Abohumad - Alsharqia, Egypt</span></p>
