--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
         .edit {
             float: right;
         }
+        #profile-photo {
+    width: 150px; /* أو الحجم المطلوب */
+    height: 150px; /* أو الحجم المطلوب */
+    border-radius: 50%; /* لجعل الصورة دائرية */
+    object-fit: cover; /* لضبط الصورة داخل الدائرة */
+    border: 2px solid #ddd; /* يمكنك تغيير اللون حسب الحاجة */
+}
     </style>
 </head>
 <body>
