--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p id="designation">IT - Technical Support<br><span id="college">Abohumad - Alsharqia, Egypt</span></p>
             <div id="social-links">
          
-                <a href="#"><i class="fab fa-linkedin-in stroke-transparent"></i></a>
+                <a href="www.linkedin.com/in/abdel-aziz-desoky-222486175"><i class="fab fa-linkedin-in stroke-transparent"></i></a>
                 <a href="#"><i class="fab fa-github stroke-transparent"></i></a>
             </div>
             <hr width="100%">
