--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ s<!DOCTYPE html>
 	<!-- Bootstrpa Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 	
+        <!-- FontAwesome  icon -->
+	<link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+	
 	<!-- FontAwesome JS -->
          <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.jss"></script>
 
